# huggingface-learning

./: pyproject.toml
image/: describe.ipynb  fire_detection.ipynb  general_ocr.ipynb  image_describe.ipynb  ocr_captcha.ipynb  realtime_object_detection.ipynb  stockmarket_kline.ipynb  text_speech.ipynb
nlp/: text.ipynb  text_classification.ipynb  text_embedding.ipynb  text_speech.ipynb  whisper_asr.ipynb
