[tool.poetry]
name = "huggingface-learning"
version = "0.1.0"
description = ""
authors = ["liuyuancheng <tenstone@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.35.2"
datasets = "^2.13.0"
torch = "^2.1.1"
jupyter = "^1.0.0"
modelscope = "^1.9.5"
gradio = "^4.7.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
